--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "vue": "^3.0.4"
   },
   "devDependencies": {
-    "vite": "^1.0.0-rc.13",
-    "@vue/compiler-sfc": "^3.0.4"
+    "@vue/compiler-sfc": "^3.0.4",
+    "import-three-examples": "^2.2.3",
+    "vite": "^1.0.0-rc.13"
   }
 }
